src/components/Footer/Footer.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

footer {
    background-color: var(--primary-color);
    color: var(--text-light);
    height: 4rem;
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    font-size: .75rem;
    padding: 0 2em;
}

footer a {
    color: #fff;
}

